# ducat

./: Cargo.toml  README.md
ducat/: Cargo.toml
ducat/src/core/: mod.rs
ducat/src/core/drawing/: bezier.rs  canvas.rs  conics.rs  cross.rs  line.rs  mod.rs  polygon.rs  rect.rs  text.rs
ducat/src/core/entity/: definitions.rs  mod.rs  point.rs  rect.rs
ducat/src/core/operation/: math.rs  mod.rs  pixelops.rs
examples/: Cargo.toml  test.rs
