[package]
name = "ducat"
version = "0.0.1"
authors = ["inkhare <iapricot@foxmail.com>"]
description = "Ducat is a complete 2D graphic library for drawing Text, Geometries, and Images."
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphic", "drawing", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rayon" ]
property-testing = [ "quickcheck" ]
display-window = ["sdl2"]

[dependencies]
conv = "0.3.3"
image = { version = "0.23.6", default-features = false }
num = "0.3.0"
rusttype = "0.9.2"
rayon = { version = "1.3.1", optional = true }
quickcheck = { version = "0.9.2", optional = true }
sdl2 = { version = "0.34.2", optional = true, default-features = false, features = ["bundled"] }
